--- a/index.html
+++ b/index.html
@@ -16,54 +16,69 @@
   <body>
     <!-- Header -->
     <header>
-      <img src="./logo.webp" alt="Logo" />
+      <img src="./img/logo.webp" alt="Logo" />
     </header>
-    <!-- First container -->
+    <!-- Container -->
     <div class="container">
-      <button class="button1">ADD TASK</button>
-      <button class="button2">ADD SECTION</button>
-    </div>
-    <!-- Second container -->
-    <div class="container2">
-      <!-- created first el -->
-      <div>
-        <span class="freccia">&blacktriangledown;</span
-        ><strong>New Task</strong>
-      </div>
-      <section>
-        <span class="circle">&check;</span> Quarterly news letter
-        <span class="blue"> editorial</span>
+      <section class="button">
+        <button class="btn filled">add task</button>
+        <button class="btn outfilled">add section</button>
       </section>
-      <!-- created second el -->
-      <div>
-        <span class="freccia">&blacktriangledown;</span><strong>Today</strong>
-      </div>
-      <section>
-        <span class="circle">&check;</span> Rectruiting blog post<span
-          class="blue"
-          >editorial</span
-        ><br />
-        <span class="circle">&check;</span> Mobile app launch
-        <span class="viola">Various</span><br />
-        <span class="circle">&cross;</span> Interview John H.
-        <span class="verdea">Recruiting</span><br />
-        <span class="circle">&check;</span> Summit update to mobile storefront
-        <span class="arancione">Mobile</span>
-      </section>
-      <!-- created third el -->
-      <div>
-        <span class="freccia">&blacktriangledown;</span
-        ><strong>Upcoming</strong>
-      </div>
-      <section>
-        <span class="circle">&cross;</span> Shedule meeting whith Alex
-        <br />
-        <span class="circle">&check;</span> Homepage Refreshb
-        <span class="rosa">Website</span><br />
-        <span class="circle">&check;</span> Onboard new Sales team menmber
-        <span class="verde">Sales</span><br />
-        <span class="circle"> &check;</span> Review editorial calendar
-        <span class="blue"> editorial</span>
+      <!-- taskgroup -->
+      <section class="task">
+        <div class="taskgroup">
+          <h3>&blacktriangledown; New Task</h3>
+          <ul>
+            <li>
+              <span class="circle check">&check;</span> Quaterly news
+              letter<span class="pill blue">Editorial</span>
+            </li>
+          </ul>
+          <h3 class="mt">&blacktriangledown; Today</h3>
+          <ul>
+            <li>
+              <span class="circle check">&check;</span> Rectruiting blog
+              post<span class="pill blue">Editorial</span>
+            </li>
+            <li>
+              <span class="circle check">&check;</span> Mobile app launch<span
+                class="pill viola"
+                >Various</span
+              >
+            </li>
+            <li>
+              <span class="circle cross">&cross;</span> Interview John H.<span
+                class="pill verde"
+                >Recluting</span
+              >
+            </li>
+            <li>
+              <span class="circle check">&check;</span> Summit update to mobile
+              storefront<span class="pill arancione">Mobile</span>
+            </li>
+          </ul>
+          <h3 class="mt">&blacktriangledown; Upcoming</h3>
+          <ul>
+            <li>
+              <span class="circle cross">&cross;</span> Shedule meeting whith
+              Alex
+            </li>
+            <li>
+              <span class="circle check">&check;</span> Homepage Refreshb<span
+                class="pill rosa"
+                >Website</span
+              >
+            </li>
+            <li>
+              <span class="circle check">&check;</span> Onboard new sales team
+              member<span class="pill verdel">Sales</span>
+            </li>
+            <li>
+              <span class="circle check">&check;</span> Review editorial
+              calendar<span class="pill blue">Editorial</span>
+            </li>
+          </ul>
+        </div>
       </section>
     </div>
   </body>
